# pico-ir

./: Quadral Breeze remote map.txt  README.md  conv.py
infrared/: Cargo.toml  rust-toolchain.toml
infrared/.cargo/: config.toml
infrared/src/: main.rs
pico-ir-api/: Cargo.toml
pico-ir-api/src/: main.rs
pico-ir-mqtt/: Cargo.toml
pico-ir-mqtt/src/: main.rs
recv-circuitpy/: code.py  pyproject.toml
