[package]
name = "infrared"
version = "0.1.0"
edition = "2024"
resolver = "2"

[[bin]]
name = "infrared"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

fixed = "1.23.1"
fixed-macro = "1.2"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.7", features = ["task-arena-size-4096", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.4" }

cortex-m = { version = "0.7.6" }
embassy-rp = { version = "0.4", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb", "binary-info"] }
static_cell = "2.1.0"


[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
